issue #9, removed page overflow: hidden, spinner now shows on load. Updated minor syntax on load from old bootstrap. fixed text spacing in about section at bottom

--- a/projects/splash/static/css/style.css
+++ b/projects/splash/static/css/style.css
@@ -321,7 +321,7 @@ button:focus{
     position: absolute;
     width: 100%;
     height: 0;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .page-slide-in-from-left{
@@ -1752,9 +1752,9 @@ button:focus{
     display: block;
     position: fixed;
     z-index: 1;
-    height: 200px;
+    height: 50px;
     left: 0px;
-    top: 50px;
+    top: 200px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     color: black;
 }
